Closed Bug 924787 Opened 11 years ago Closed 11 years ago

[AudioManager] BT_SCO's volume can't be adjusted during voice call because of wrong check of mozsetting name.

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:koi+, firefox25 wontfix, firefox26 fixed, firefox27 fixed, b2g-v1.2 fixed)

RESOLVED FIXED
blocking-b2g koi+
Tracking Status
firefox25 --- wontfix
firefox26 --- fixed
firefox27 --- fixed
b2g-v1.2 --- fixed

People

(Reporter: mchen, Assigned: mchen)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

1. Enable BT and connected to BT headset (HFP).
2. Make a phone call to another side.
3. After picking up by remote side, try to change the volume by hardware key.

Expected: the voice volume is changed.

Actual: the voice volume is not changed.
Attached patch Patch v1 (obsolete) — Splinter Review
The checking condition should be "accept to change volume only when settings name is bt_sco".

The wrong condition now is "accept to change volume when settings name is not bt_sco."
Attachment #814795 - Flags: review?(mwu)
Attachment #814795 - Flags: review?(mwu) → review+
We need this patch for V1.2 or the BT SCO volume can't be adjusted during voice call state.
blocking-b2g: --- → koi?
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/f6f83e7e2bfa
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
blocking-b2g: koi? → koi+
Keywords: regression
Whiteboard: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: