Bug 924787 - [AudioManager] The checking condition should be "leave here if settings name is not for bt_sco". r=mwu